Several changes. Worked with the entire set of cards in the database. Improved the card layout issues to make it somewhat more iline with mtgjson (although have not fixed card details/display yet). Improved symbol conversion on display and fixed issue of missing slash. Added rarity to search.

--- a/cn/cn.css
+++ b/cn/cn.css
@@ -211,7 +211,9 @@ th, td {
 td {
   vertical-align: top;
 }
-
+td.rulingdate {
+  white-space: nowrap;
+}
 .list_cardimage {
   width:150px;
   height: auto;
